Java10 Collection Enhancement Scenarios Updated