@@ -1,9 +1,9 @@
 package java10.feature.collections.enhancements;
 
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.Map;
 
-public class _05_ImmutableCollections_Map_Demo1 {
+public class _08_ImmutableCollections_Map_Demo2 {
 
 	public static void main(String[] args) {
 
@@ -11,7 +11,7 @@ public class _05_ImmutableCollections_Map_Demo1 {
 		map.put(1, "Alex");
 		map.put(2, "John");
 		map.put(3, "Smith");
-		var immutableMap = Collections.unmodifiableMap(map);
+		var immutableMap = Map.copyOf(map);
 		System.out.println(immutableMap);
 		immutableMap.put(4, "Erica");
 	}
